--- a/warehouse/dbt_project.yml
+++ b/warehouse/dbt_project.yml
@@ -52,7 +52,7 @@ vars:
   procurement_sample: 'data/sample_procurement.csv'
   procurement_glob: 'data/cache/procurement_contracts_*.csv'
   lego_pieces_json: 'data/lego_pieces.json'
-  lego_baseline_glob: 'data/cache/lego_baseline_*.json'
+  lego_baseline_glob: 'data/cache/lego_baseline_[0-9][0-9][0-9][0-9].json'
   gdp_series_csv: 'data/gdp_series.csv'
   baseline_deficit_debt_csv: 'data/baseline_deficit_debt.csv'
   plf_2026_plafonds_csv: 'warehouse/seeds/plf_2026_plafonds.csv'
